fix(backend): click bingo card should accept UUID string
