# backend/controllers/user.go
@@ -4,6 +4,7 @@ import (
 	"encoding/gob"
 	"github.com/Blarc/advent-of-code-bingo/models"
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
 	"log"
 	"net/http"
 )
@@ -37,7 +38,7 @@ func FindMe(c *gin.Context) {
 // @Produce json
 // @Success 200 {object} models.UserDto
 // @Router /me/bingoCard/{id} [post]
-// @Param id path int true "Bingo Card ID"
+// @Param id path string true "Bingo Card ID"
 // @Security Token
 func ClickBingoCard(c *gin.Context) {
 
@@ -48,15 +49,22 @@ func ClickBingoCard(c *gin.Context) {
 		return
 	}
 
+	cardUuid, err := uuid.Parse(bingoCardId.ID)
+	if err != nil {
+		log.Printf("Failed to create UUID from string: %v\n", err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": err})
+		return
+	}
+
 	var bingoCard models.BingoCard
-	if err := models.DB.First(&bingoCard, bingoCardId.ID).Error; err != nil {
+	if err := models.DB.First(&bingoCard, cardUuid).Error; err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
 	var user = c.MustGet("user").(models.User)
 	for _, bingoCard := range user.BingoCards {
-		if bingoCard.ID == bingoCardId.ID {
+		if bingoCard.ID == cardUuid {
 			log.Printf("bingo card %d already clicked", bingoCardId.ID)
 			err := models.DB.Model(&user).Association("BingoCards").Delete(&bingoCard)
 			if err != nil {
@@ -67,7 +75,7 @@ func ClickBingoCard(c *gin.Context) {
 		}
 	}
 
-	err := models.DB.Model(&user).Association("BingoCards").Append(&bingoCard)
+	err = models.DB.Model(&user).Association("BingoCards").Append(&bingoCard)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
